--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -86,6 +86,20 @@ button:active {
     color: #38a1f3;
 }
 
+/* Loader */
+.loader {
+    border: 16px solid #fff;
+    border-top: 16px solid #333;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 
 /* Media Query: Tablet or Smaller */
 
