--- a/infinite-scroll/style.css
+++ b/infinite-scroll/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Corben&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 html {
     box-sizing: border-box;
@@ -7,7 +7,8 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-    font-family: 'Corben', cursive;
+    font-family: 'Abril Fatface', cursive;
+    letter-spacing: 2px;
 }
 
 h1 {
