--- a/picture-in-picture/style.css
+++ b/picture-in-picture/style.css
@@ -7,10 +7,40 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-    font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-bottom: 5vh;
     background-color: #222;
+}
+
+.button-container {
+    border: 2px solid black;
+    border-radius: 8px;
+    padding: 8px;
+    box-shadow: inset 0px 20px 4px -19px rgba(255, 255, 255, 0.7);
+}
+
+button {
+   cursor: pointer; 
+   outline: none;
+   width: 120px;
+   height: 75px;
+   font-family: 'Montserrat', sans-serif;
+   font-size: 24px;
+   border-radius: 4px;
+   color: white;
+   text-shadow: 0px 2px 4px black;
+   background: linear-gradient(to top, #696969, #575757);
+   border: 2px solid black;
+   box-shadow: inset 0px 20px 4px -19px rgba(255, 255, 255, 0.4), 0px 12px 12px 0 rgba(0, 0, 0, 0.3);
+}
+
+button:hover {
+   background: linear-gradient(to bottom, #696969, #575757);
+}
+
+button:active {
+transform: translateY(3px);
+box-shadow: 0 6px 6px  rgba(0, 0, 0, 0.3)  ;
 }
