added css and html to animated navigation

--- a/animated-navigation/style.css
+++ b/animated-navigation/style.css
@@ -2,11 +2,11 @@
 
 :root {
   --primaryColor: #fff;
-  --navColor1: #F0EF02;
-  --navColor2: #98b606;
-  --navColor3: #60D3DA;
-  --navColor4: #456625;
-  --navColor5: #6b4923;
+  --navColor1: #c5c51d;
+  --navColor2: #91ad05;
+  --navColor3: #456625 ;
+  --navColor4: #44a8ad;
+  --navColor5: #193c64;
 
 }
 
@@ -17,11 +17,94 @@ html {
 body {
   margin: 0;
   background: #000;
-  font-family: 'Paytone One', sans-serif;}
+  font-family: 'Paytone One', sans-serif;
+  overflow-x: none;
+}
 
 /* --- Navigation Menu ------------------------------ */
+nav, nav ul {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  
+}
+
+nav ul {
+display: flex;
+flex-direction: column;
+justify-content: stretch;
+list-style: none;
+}
+
+li a {
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  font-size: 64px;
+  
+}
+
+nav li {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+nav ul li a::before {
+  content: "";
+  width: 20vw;
+  height: 1px;
+  position: absolute;
+  margin-top: 2%;
+  left: 0;
+  background-color: #fff;
+  }  
+
+nav li a:hover {
+  transform: scale(120%);
+  
+}
+
+nav li a:hover::before {
+  width: 35vw;
+  } 
 
 
+nav li:nth-of-type(1) {
+  background-color: var(--navColor1);
+}
+
+nav li:nth-of-type(2) {
+  background-color: var(--navColor2);
+}
+
+nav li:nth-of-type(3) {
+  background-color: var(--navColor3);
+}
+
+nav li:nth-of-type(4) {
+  background-color: var(--navColor4);
+}
+
+nav li:nth-of-type(5) {
+  background-color: var(--navColor5);
+}
+
+/* Overlay */
+.overlay {
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  
+}
 
 /* --- Menu Bars ------------------------------------ */
 
