--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ html {
     margin-right: 36px;
     border-radius: 12px;
     box-shadow: inset 0 24px 2px 0 rgba(23, 33, 36, 0.1);
+    object-fit: cover;
 }
 
 .item p {
