--- a/book-keeper/style.css
+++ b/book-keeper/style.css
@@ -47,9 +47,10 @@ button:hover {
     padding: 20px;
     background-color: aliceblue;
     border-radius: var(--border-radius);
-    margin: 0 11px 0;
+    margin: 0 11px 22px;
     display: flex;
     position: relative;
+    
 }
 
 .item:hover {
@@ -177,6 +178,11 @@ input {
 
 input:focus {
     border: solid 1px var(--primary-color);
+}
+
+.input-error { 
+    border: solid 1px crimson;
+
 }
 
 label {
