--- a/video-player/style.css
+++ b/video-player/style.css
@@ -88,10 +88,11 @@ video {
     align-items: center;
     border-radius: 4px;
     padding: 0 12px 0 0;
+    width: 190px;
     height: 100%;
     justify-content: space-between;
 }
-
+/* 
 .volume-bg {
     width: 80px;
     background-color: rgba(216, 224, 228, 0.25);
@@ -118,14 +119,14 @@ video {
     top: -2px;
     left: 0;
     transform: translateX(-50%);
-}
+} 
 
 .volume-toggle:hover {
     height: 12px;
     width: 12px;
     top: -3px;
     transform: translateX(-50%);
-}
+} */
 
 .right {
     display: flex;
