--- a/video-player/style.css
+++ b/video-player/style.css
@@ -35,6 +35,10 @@ video {
     box-shadow: 0 8px 20px 2px rgba(7, 16, 20, 0.3) ;
 }
 
+.hover-info {
+    transition: all ease-in-out 2s;
+}
+
 .controls-container {
     background: linear-gradient(rgba(7, 16, 20, 0.0), rgba(7, 16, 20, 0.4) ) ;
     bottom: 0;
@@ -54,6 +58,7 @@ video {
 
 .timeline-container {
     width: 100%;
+    cursor: pointer;
 }
 
 .timeline {
@@ -92,6 +97,7 @@ video {
     height: 100%;
     justify-content: space-between;
 }
+
 /* 
 .volume-bg {
     width: 80px;
@@ -131,6 +137,8 @@ video {
 .right {
     display: flex;
     align-items: center;
+    justify-content: end;
+    position: relative;
 }
 
 .speed-container {
@@ -147,11 +155,6 @@ video {
     border-radius: 4px;
 }
 
-.control:hover {
-    background-color: rgba(216, 224, 228, 0.25); 
-    cursor: pointer;
-}
-
 .volume:hover {
     background-color: rgba(216, 224, 228, 0.25); 
     cursor: pointer;
@@ -159,7 +162,7 @@ video {
     margin: 4px;
 }
 
-.fa-chevron-down {
+.speed-container i {
     font-size: 10px;
     margin: 2px 0 0 8px;
     padding: 0;
@@ -178,4 +181,32 @@ video {
 
 h3 {
     display: inline;
+}
+
+.speed-dropdown {
+    position: absolute;
+    bottom: 46px;
+    right: 46px;
+    padding: 4px;
+    background-color: rgba(216, 224, 228, 0.25); 
+    border-radius: 4px;
+}
+
+.speed-dropdown p {
+    padding: 8px 8px;
+    margin: 0 0 2px 0;
+    border-radius: 4px;
+}
+
+.control {
+    user-select: none;
+}
+
+.control:hover {
+    background-color: rgba(216, 224, 228, 0.25); 
+    cursor: pointer;
+}
+
+.selected {
+    background-color: rgba(216, 224, 228, 0.25); 
 }
