--- a/video-player/style.css
+++ b/video-player/style.css
@@ -35,8 +35,32 @@ video {
     box-shadow: 0 8px 20px 2px rgba(7, 16, 20, 0.3) ;
 }
 
-.hover-info {
-    transition: all ease-in-out 2s;
+.fake-video {
+    display: none;
+}
+
+.preview-container {
+    position: absolute;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    bottom: 16px;
+    transform: translateX(-50%);
+}
+
+.preview-time {
+    background-color: rgba(7, 16, 20, 0.3);
+    border-radius: 4px;
+    padding: 2px 8px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -2px;
+    box-shadow: 0 1px 1px 0px rgba(7, 16, 20, 0.3) ;
+}
+
+canvas {
+    display: block;
+    border-radius: 4px;
 }
 
 .controls-container {
@@ -59,6 +83,9 @@ video {
 .timeline-container {
     width: 100%;
     cursor: pointer;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    position: relative;
 }
 
 .timeline {
@@ -76,11 +103,21 @@ video {
     transition: all 0.1s linear;
 }
 
+.hovered-time {
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 4px;
+    transform: translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.4);
+    height: 100%;
+    border-radius: 10px;
+}
+
 .controls {
     display: flex;
     justify-content: space-between;
     max-height: 40px;
-    margin-top: 8px;
 }
 
 .left {
