--- a/video-player/style.css
+++ b/video-player/style.css
@@ -15,6 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Anonymous Pro', monospace;
+    overflow-x: hidden;
 }
 
 .video-container {
@@ -45,6 +46,7 @@ video {
     border-radius: 4px;
     bottom: 16px;
     transform: translateX(-50%);
+    pointer-events: none;
 }
 
 .preview-time {
@@ -112,6 +114,7 @@ canvas {
     background-color: rgba(255, 255, 255, 0.4);
     height: 100%;
     border-radius: 10px;
+    pointer-events: none;
 }
 
 .controls {
@@ -134,42 +137,6 @@ canvas {
     height: 100%;
     justify-content: space-between;
 }
-
-/* 
-.volume-bg {
-    width: 80px;
-    background-color: rgba(216, 224, 228, 0.25);
-    height: 6px;
-    border-radius: 10px;
-    margin: 12px 0 12px 0;
-    position: relative;
-}
-
-.volumeline {
-    width: 0;
-    background-color: #fff;
-    height: 100%;
-    border-radius: 10px;
-}
-
-.volume-toggle {
-    height: 10px;
-    width: 10px;
-    background-color: #fff;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px 0 rgba(7, 16, 20, 0.6);
-    position: absolute;
-    top: -2px;
-    left: 0;
-    transform: translateX(-50%);
-} 
-
-.volume-toggle:hover {
-    height: 12px;
-    width: 12px;
-    top: -3px;
-    transform: translateX(-50%);
-} */
 
 .right {
     display: flex;
@@ -203,6 +170,7 @@ canvas {
     font-size: 10px;
     margin: 2px 0 0 8px;
     padding: 0;
+    pointer-events: none;
 }
 
 .title-container {
