--- a/spock-rock-game/style.css
+++ b/spock-rock-game/style.css
@@ -19,6 +19,7 @@ html, body {
   text-align: center;
   max-width: 100%;
   overflow-x: hidden;
+  user-select: none;
 }
 
 .header {
@@ -30,7 +31,7 @@ html, body {
 
 h1 {
   color: var(--onbackground);
-  font-size: 80px;
+  font-size: 24px;
   letter-spacing: 20px;
   left: 0px;
   margin: 0;
@@ -101,6 +102,11 @@ h2 {
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
 }
 
 .reset-icon {
