--- a/nasa-api-pictures/style.css
+++ b/nasa-api-pictures/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Montserrat+Alternates:wght@500;600&display=swap');
+
 html {
   box-sizing: border-box;
 }
@@ -10,6 +12,37 @@ body {
   font-size: 1rem;
   line-height: 1.8rem;
   color: rgb(255, 255, 255, 0.8);
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+
+p {
+  opacity: 60%;
+  font-family: 'Inter', sans-serif;
+}
+
+h3 {
+  margin: 0;
+}
+
+button {
+  background-color: rgb(255,185,91);
+  border: none;
+  padding: 12px 24px;
+  border-radius: 4px;
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  filter: brightness(90%);
+}
+
+button.secondary {
+  background-color: rgb(10,16,37);
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 500;
 }
 
 .container {
@@ -35,6 +68,18 @@ body {
 .navigation-container {
   position: fixed;
   top: 0;
+  z-index: 10;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.navigation-container h3 {
+  position: relative;
+  margin-top: 16px;
+}
+
+.gap {
+  width: 60px
 }
 
 .navigation-items {
@@ -42,13 +87,19 @@ body {
   justify-content: center;
 }
 
+.navigation-items i {
+  color: rgb(255,185,91);
+  font-size: 16px;
+}
+
 .background {
-  background-color: rgba(10, 16, 37);
   position: fixed;
   right: 0;
   width: 100%;
   height: 60px;
   z-index: -1;
+  backdrop-filter: blur(10px);
+  background-color: rgba(19, 26, 49, 0.5);
 }
 
 .clickable {
@@ -56,19 +107,31 @@ body {
   user-select: none;
 }
 
+
 .clickable:hover {
   color: rgb(255, 255, 255, 1);
+}
+
+.active::after {
+  content: '';
+  display: block;
+  position: absolute;
+ top: -16px;
+  left: 0;
+  background-color: rgb(60,192,153);
+  height: 3px;
+  width: 100%;
 }
 
 /* Images Container */
 .images-container {
   max-width: 1000px;
-  margin-top: 80px;
+  margin: 80px 24px 0;
 }
 
 .card {
-  background: rgb(10,16,37);
-  margin: 10px 10px 20px;
+  background-color: rgba(19, 26, 49, 0.5);
+  margin: 10px 0 24px;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
@@ -112,13 +175,34 @@ body {
   color: white;
 }
 
+/* Empty state Favourite */
+
+.favourite-empty {
+  text-align: center;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.favourite-empty p {
+  margin: 4px 0 24px;
+}
+
+.illustration {
+  font-size: 50px;
+  margin-bottom: 24px;
+}
+
 /* Save Confirmation */
 .save-confirmed {
   background:  rgb(255,185,91);
   color: rgb(10,16,37);
-  padding: 4px 24px;
+  padding: 12px 16px;
   border-radius: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9);
   transition: 0.3s;
   position: fixed;
   bottom: 25px;
@@ -135,7 +219,7 @@ body {
   }
 }
 
-/* Hidden */
+/* Hidden  & Disabled*/
 .hidden {
   display: none;
 }
@@ -152,10 +236,12 @@ body {
     padding: 16px;
   }
 
-
   .card-title {
     font-size: 20px;
   }
 
+  .gap {
+    width: 20px
+  }
   
 }
