--- a/drag-and-drop/style.css
+++ b/drag-and-drop/style.css
@@ -45,33 +45,6 @@ p {
   line-height: 128%;
 }
 
-/* Textarea */
-
-textarea {
-  display: block;
-  width: 100%;
-  font-size: 16px;
-  color: rgba(255, 255, 255, 0.85);
-  font-weight: 400;
-  line-height: 128%;
-  resize: none;
-}
-
-textarea:focus {
-  border: 1px solid rgba(88, 86, 222);
-}
-
-textarea.error {
-  border: 1px solid rgb(216, 64, 64);
-}
-
-.error-text {
-  display: block;
-  color: rgb(216, 64, 64);
-  font-size: 14px;
-  margin: 0 0 12px;
-}
-
 /* Scrollbar */
 
 ::-webkit-scrollbar {
@@ -129,13 +102,31 @@ textarea.error {
 }
 
 .card {
-  flex: 0 0 auto;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.6);
-  border-radius: var(--small-radius);
-  margin: 0 0 4px;
+  position: relative;
+}
+
+.card i {
+  display: none;
+  font-size: 16px;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  color: rgba(255, 255, 255, 0.6);
   cursor: pointer;
-  height: fit-content;
+  padding: 12px;
+}
+
+.card:hover i {
+  display: block;
+}
+
+i.fa-pen-clip {
+  right: 32px;
+}
+
+.card i:hover {
+  color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .drop-expect::after {
@@ -146,6 +137,41 @@ textarea.error {
   border-radius: var(--small-radius);
 } 
 
+/* Textarea */
+
+textarea {
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.85);
+  font-weight: 400;
+  line-height: 128%;
+  resize: none;
+  flex: 0 0 auto;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: var(--small-radius);
+  margin: 0 0 4px;
+  cursor: pointer;
+  height: fit-content;
+}
+
+textarea:focus {
+  border: 1px solid rgba(88, 86, 222);
+  cursor: auto;
+}
+
+textarea.error {
+  border: 1px solid rgb(216, 64, 64);
+}
+
+.error-text {
+  display: block;
+  color: rgb(216, 64, 64);
+  font-size: 14px;
+  margin: 0 0 12px;
+}
 /* Add card */
 
 .add-text {
