--- a/drag-and-drop/style.css
+++ b/drag-and-drop/style.css
@@ -16,7 +16,7 @@ body {
   background-attachment: fixed;
   color: white;
   font-family: var(--font);
-  overflow-y: hidden;
+  height: auto;
 }
 
 h1 {
@@ -71,7 +71,7 @@ p {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
-  padding: 0 24px;
+  padding: 0 24px 80px;
   white-space: nowrap;
 }
 
@@ -99,6 +99,10 @@ p {
   margin-left: 12px;
   font-size: 14px;
   border-radius: var(--tiny-radius);
+}
+
+.cardstack {
+  min-height: 30px;
 }
 
 .card {
@@ -154,7 +158,7 @@ textarea {
   border-radius: var(--small-radius);
   margin: 0 0 4px;
   cursor: pointer;
-  height: fit-content;
+  /* height: fit-content; */
 }
 
 textarea:focus {
