--- a/main.css
+++ b/main.css
@@ -1,45 +1,102 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
 
+*{
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+
+/* -------------------- */
 
 html {
-   box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
-   background-color: rgb(236, 240, 241);
+   background-color: rgb(226, 238, 241);
+}
 
+h1 {
+    font-size: 4rem;
+    text-align: center;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: 1.7rem;
+    font-weight: 600;
+    margin: 1.2em 0 0.7em;
+}
+
+p {
+    font-size: 1.3rem;
+    color: rgb(95, 110, 114);
+    line-height: 130%;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
+}
+
+a {
+    color: rgba(19, 38, 44);
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 85vw;
     margin: 0 auto;
 }
 
 .hero-container{
-    max-width: 85%;
-    margin-bottom: 40px;
+    padding: 6em 0;
 }
 
 .items-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: 0;
     padding: 0;
-}
-
-.row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 24px;
+    gap: 32px;
 }
 
 .item {
     padding: 24px 24px 36px;
     text-decoration: none;
     border-radius: 24px;
-    background-color: white;
-    max-width: 45%;
-    box-shadow: 0 2px 8px 4px  rgba(23, 33, 36, 0.2);
+    background-color: rgb(251, 254, 255);
+    box-shadow: 0 2px 16px 4px  rgba(19, 38, 44, 0.021);
+    transition: 300ms ease;
 }
 
 .item:hover {
-    transform: scale(110%);
+    transform: scale(105%) translateY(-4%);
     box-shadow: 0 2px 16px 8px  rgba(23, 33, 36, 0.2);
     cursor: pointer;
 }
@@ -48,36 +105,14 @@ html {
     max-width: 100%;
     margin-right: 36px;
     border-radius: 12px;
-    box-shadow: inset 0 24px 2px 0 rgba(23, 33, 36, 0.1);
+    box-shadow: 0 0 1px 1px rgba(23, 33, 36, 0.1);
     object-fit: cover;
+    object-position: center;
+    min-height: 300px;
 }
 
 .item p {
     margin-bottom: 32px;
 }
 
-a {
-    text-decoration: none;
-    padding: 12px 16px;
-    background-color: rgb(23, 33, 36);
-    color: white;
-    border-radius: 12px;
-}
- 
-p {
-    font-size: 16px;
-    color: rgb(77, 93, 97);
-    line-height: 130%;
 
-}
-
-p.hero-text {
-    font-size: 22px;
-    line-height: 140%;
-}
-
-
-h1 {
-    font-size: 48px;
-    text-align: center;
-}
