--- a/custom-countdown/style.css
+++ b/custom-countdown/style.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   align-items: center;
   font-family: 'Albert Sans', sans-serif;
+
 }
 
 /* Video Background */
@@ -40,28 +41,31 @@ video {
 
 /* Container */
 .container {
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
   min-width: 580px;
-  min-height: 304px;
+  width: 40%;
   color: black;
   margin: 0 auto;
-  padding: 60px 60px 68px 60px;
-  border-radius: 5px;
+  padding: 5em;
   z-index: 2;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.85);
-}
+  box-shadow: 0 10px 24px rgba(0, 0, 0, 0.452);
 
-.input-container {
-  position: relative;
-  top: 20px;
+
 }
 
 h1 {
   font-size: 40px;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 24px;
+  margin-bottom: 1em;
 }
 
 /* Form */
@@ -71,18 +75,21 @@ h1 {
 
 label {
   font-weight: bold;
+  font-size: 1.2rem;
   margin-left: 10px;
 }
 
 input {
   width: 95%;
-  margin-bottom: 10px;
-  padding: 10px;
+  margin-top: 0.4em;
+  margin-bottom: 1.5em;
+  padding: 1em;
   border: 1px solid #ccc;
-  border-radius: 20px;
+  border-radius: 4em;
   background: #fff;
   outline: none;
   font-family: 'Albert Sans', sans-serif;
+  font-size: 1rem;
 }
 
 .input-error {
@@ -100,8 +107,8 @@ p {
 /* Button */
 button {
   width: 100%;
-  height: 40px;
-  border-radius: 20px;
+  height: 3em;
+  border-radius: 4em;
   margin-top: 15px;
   border: none;
   text-transform: uppercase;
@@ -110,6 +117,7 @@ button {
   cursor: pointer;
   outline: none;
   font-family: 'Albert Sans', sans-serif;
+  font-size: 1rem;
 }
 
 button:hover {
