--- a/infinite-scroll/style.css
+++ b/infinite-scroll/style.css
@@ -9,12 +9,18 @@ body {
     min-height: 100vh;
     font-family: 'Abril Fatface', cursive;
     letter-spacing: 2px;
+    padding: 60px 5%;
 }
 
 h1 {
     font-size: 2.5rem;
     text-align: center;
-    margin: 24px auto 36px;
+    margin: 0 auto;
+}
+
+p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
 }
 
 /* Loader */
@@ -35,7 +41,7 @@ h1 {
 }
 
 .image-container {
-    margin: 10px 15%;
+    margin: 60px 15%;
     display: flex;
     flex-direction: column;
     align-items: center;
