--- a/main.css
+++ b/main.css
@@ -52,9 +52,9 @@ h1 {
 }
 
 h3 {
+    padding: 1.2em 0 0.6em;
     font-size: 1.7rem;
     font-weight: 600;
-    margin: 1.2em 0 0.7em;
 }
 
 p {
@@ -72,22 +72,21 @@ a {
 .container {
     max-width: 85vw;
     margin: 0 auto;
+    padding: 5rem 5%;
 }
 
 .hero-container{
-    padding: 6em 0;
+    padding: 0  0 5rem 0;
 }
 
 .items-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin: 0;
-    padding: 0;
     gap: 32px;
 }
 
 .item {
-    padding: 24px 24px 36px;
+    padding: 2em;
     text-decoration: none;
     border-radius: 24px;
     background-color: rgb(251, 254, 255);
@@ -108,11 +107,51 @@ a {
     box-shadow: 0 0 1px 1px rgba(23, 33, 36, 0.1);
     object-fit: cover;
     object-position: center;
-    min-height: 300px;
+    min-height: 25vh;
 }
 
 .item p {
     margin-bottom: 32px;
 }
 
+@media screen and (max-width: 1800px) {
+    .container {
+        max-width: 95vw;
+    }
+}
 
+@media screen and (max-width: 1200px) {
+    .items-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .items-container {
+        grid-template-columns: 1fr;
+    }
+
+    .item {
+        display: flex;
+    }
+
+    .item img {
+        width: 30%;
+        min-height: 10vh;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .items-container {
+        grid-template-columns: 1fr;
+    }
+
+    .item {
+        display: block;
+    }
+
+    .item img {
+        width: 100%;
+        min-height: 25vh;
+    }
+}
