--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -8,7 +8,9 @@ body {
     margin: 0;
     min-height: 100vh;
     background-color: #fff4ad;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23f4cf8b' fill-opacity='1'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-image: url(eugene-lagunov-dD7wg5G28hY-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
 
     color:black;
     font-family: 'Inter', sans-serif;
@@ -22,7 +24,7 @@ body {
 
 .quote-container {
     max-width: 880px;
-    padding: 40px 56px;
+    padding: 6em 8em;
     background-color: rgba(255, 255,255, 0.4);
     backdrop-filter: blur(4px);
     border: solid 2px white;
@@ -32,7 +34,7 @@ body {
 }
 
 .quote-text {
-    font-size: 2.2rem;
+    font-size: 3rem;
 }
 
 .long-quote-text {
@@ -40,15 +42,19 @@ body {
 }
 
 .fa-quote-left {
-    font-size: 4rem;
-    color: #333;
+    font-size: 3em;
+    color: #ffffff;
+    transform: translate(-0.09em, 0.09em);
 }
 
+
+
 .quote-author {
-    margin-top: 16px;
+    margin-top: 1.2em;
     font-size: 1.5rem;
     font-style: italic;
     font-weight: 400;
+    margin-bottom: 2.5em;
 
 }
 
@@ -64,11 +70,12 @@ button{
     background: #333;
     color: white;
     padding: 0.6rem 1.6rem;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     cursor: pointer;
     outline: none;
     box-shadow: 0 0.3rem  rgba(121, 121, 121, 0.65);
-    font-family: inherit;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition: all 300ms;
 }
 
 button:hover {
@@ -82,8 +89,14 @@ button:active {
     box-shadow: 0 0.05rem rgba(121, 121, 121, 0.65);
 }
 
+.twitter-button {
+    background-color: #fff;
+    color: #8bcdff;
+}
+
 .twitter-button:hover {
-    color: #38a1f3;
+    background-color: #38a1f3;
+    color: #fff;
 }
 
 /* Loader */
