--- a/LaslesVPN/css/LaslesVPN.css
+++ b/LaslesVPN/css/LaslesVPN.css
@@ -31,6 +31,10 @@ body, h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 ul {
     list-style: none;
 }
@@ -389,23 +393,25 @@ ul {
         justify-content: flex-start;
     }
 
-    .customer_card:first-child {
-        border: 2px solid var(--red);
-    }
-
+  
     .customer_stack::-webkit-scrollbar {
         width: 0;
     }
 
     .customer_card {
-        border: var(--border) solid 1px;
+        box-shadow: 0 0 0 1px var(--border);
         border-radius: var(--radius);
         min-width: 400px;    
         height: 100%;
         padding: 30px;
+        max-width: 600px;
+        transition: all 500ms ease;
     }
 
- 
+    .card-active {
+        box-shadow: 0 0 0 2px var(--red);
+    }
+
 
     .customer_card h5 {
         text-align: left;
@@ -457,9 +463,12 @@ ul {
         width: 15px;
         border-radius: 10px;
         margin-right: 15px;
+        transition: all 500ms ease;
+        cursor: pointer;
+
     }
 
-    .customer_dots :first-child {
+    .customer_dots .dot-active {
         width: 45px;
         background-color: var(--red);
     }
