--- a/LaslesVPN/css/LaslesVPN.css
+++ b/LaslesVPN/css/LaslesVPN.css
@@ -51,27 +51,27 @@ img{
 /* Fonts */
 
     h1 {
-        font-size: 50px;
+        font-size: 3.125rem;
         font-weight: 500;
         color: var(--black);
     }
 
     h3 {
-        font-size: 35px;
+        font-size: 2.188rem;
         font-weight: 500;
         line-height: 50px;
         color: var(--black);
     }
 
     h4 {
-        font-size: 25px;
+        font-size: 1.563rem;
         font-weight: 700;
         color: var(--black);
     }
 
     h5 {
         font-weight: 500;
-        font-size: 18px;
+        font-size: 1.125rem;
         line-height: 30px;
         color: var(--black);
         text-align: center;
@@ -179,7 +179,7 @@ img{
 
     button.secondary {
         font-weight: 500;
-        padding: 13px 45px;
+        padding: 0.813em 2.813em;
         border-radius: 100px;
         background-color: transparent;
         border: 1px solid  var(--red);
@@ -198,7 +198,7 @@ img{
 
     button.tetriary {
         font-weight: 500;
-        padding: 13px 45px;
+        padding: 0.813em 2.813em;
         border: 1px transparent var(--red);
         border-radius: 100px;
         background-color: transparent;
@@ -217,6 +217,12 @@ img{
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+
+    .logo {
+        background-image: url(../svg/Logo.svg);
+        width: 149px;
+        height: 36px;
     }
 
     .menu nav {
@@ -239,8 +245,7 @@ img{
         display: flex;
         align-items: center;
         justify-content: left;
-        margin: 89px 0 102px ;
-
+        margin: 89px 0 102px;
     }
 
     .inner__hero img {
@@ -267,26 +272,26 @@ img{
         display: flex;
         justify-content: space-around;
         background-color: var(--white);
-        padding: 37px 60px;
         position: relative;
         z-index: 2;
         border-radius: 10px;
-        flex-wrap: wrap;
+        padding: 38px;
+        min-height: 200px;
     }
 
     .divider {
         background-color: var(--divider);
         width: 2px;
-        height: 125px;
+        height: auto;
     }
 
     .numbers_card {
         display: flex;
         align-items: center;
-    }
-
-    .numbers_card div {
-        margin-left: 36px;
+        padding: 32px;
+        justify-content: center;
+        gap: 36px;
+        width: 100%;
     }
 
     .numbers_card h4 {
@@ -301,7 +306,7 @@ img{
         background-color: #0D1025;
         position: absolute;
         width: 93%;
-        height: 190px;
+        min-height: 190px;
         top: 60px;
         left: 50%;
         transform: translateX(-50%);
@@ -323,10 +328,6 @@ img{
         align-items: center;
         padding: 95px 0 131px;
 
-    }
-
-    .features__inner img {
-        max-width: 100%;
     }
 
     .features_content {
@@ -364,7 +365,7 @@ img{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         margin: 60px 0 0;
-        gap: 50px;
+        gap: min(4vw, 50px);
     }
 
     .plan_card:last-child {
@@ -656,10 +657,9 @@ img{
     .logos {
         display: flex;
         justify-content: space-between;
-        margin-bottom: 50px;
+        margin-bottom: 97px;
         gap: min(3%, 60px);
         width: 100%;
-        /* flex-wrap: wrap; */
     }
 
     .logos div {
@@ -670,6 +670,16 @@ img{
 
     .customers {
         overflow-x: hidden;
+    }
+
+    .customer__inner > h3,
+    .customer__inner > p {
+        max-width: 555px;
+        margin: 0 auto;
+    }
+
+    .customer__inner > h3 {
+        margin-bottom: 20px;
     }
 
     .wrapper {
@@ -769,6 +779,8 @@ img{
         justify-content: space-between;
         align-items: center;
         margin-bottom:  180px ;
+        flex-wrap: wrap;
+        gap: 32px;
     }
 
     .customer_slider button {
@@ -787,7 +799,7 @@ img{
         justify-content: space-between;
         align-items: center;
         border-radius: var(--radius);
-        padding: 58px 70px;
+        padding: 58px min(10vw, 70px);
         position: relative;
         z-index: 2;
         background-color: var(--white);
@@ -829,7 +841,6 @@ img{
         margin: 30px 20px 30px 0px;
         border-radius: 50%;
         box-shadow: 0px 13px 18px rgba(17, 19, 35, 0.08)
-
     }
 
     p.copywrite {
@@ -880,30 +891,73 @@ img{
         grid-template-columns: 1fr 1fr;
     }
 
-    .plan_card:last-child {
-        flex-direction: row;
-        border: 2px solid var(--red);
-        grid-column: 1 / 3;
-        justify-content: space-between;
-        padding: 60px 60px;
-        position: relative;
-        align-items: center;
-    }
-
-    .plan_card:last-child .plan_img {
-        margin: 0;
-        position: absolute;
-        right: calc((50% - 100px) / 2);
-        bottom: 50%;
-        transform: translateY(0);
-    }
-
     .card_text {
         height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
+    }
+
+    .cta__inner {
+        flex-direction: column;
+        text-align: center;
+        gap: 40px;
+    }
+
+    .footer__inner > div {
+        width: 100%;
+        text-align: center;
+    }
+
+    .footer_right {
+        margin-bottom: 50px;
+    }
+
+    .footer_rigth_column {
+        margin-left: 0;
+        margin: 0 auto;
+        padding: 24px;
+    }
+
+    .footer_rigth_column h5 {
+        text-align: center;
+    }
+
+    .footer_left p  {
+       max-width: unset;
+    }
+
+    .social:last-child {
+        margin-right: 0;
+    }
+
+    .check_thin {
+        padding-left: min(4vw, 40px);
+    }
+
+    .check_thin > li {
+        padding-right: 5vw;
+    }
+}
+
+@media screen and (max-width: 800px) and (min-width: 500px) {
+    .plan_card:last-child {
+        flex-direction: row;
+        border: 2px solid var(--red);
+        grid-column: 1 / 3;
+        justify-content: space-between;
+        padding: min(4vw, 60px);
+        position: relative;
+        align-items: center;
+    }
+    
+    .plan_card:last-child .plan_img {
+        margin: 0;
+        position: absolute;
+        right: calc((50% - 100px) / 2);
+        bottom: 50%;
+        transform: translateY(0);
     }
 
     .plan_card:last-child .plan_card_bottom {
@@ -916,29 +970,102 @@ img{
         transform: translateY(75%);
     }
 
-    .cta__inner {
+    .numbers_card{
+        text-align: center;
         flex-direction: column;
-        text-align: center;
-        gap: 40px;
+    }
+} 
 
+
+@media screen and (max-width: 800px) {
+
+    .numbers__inner {
+        text-align: center;
+        flex-direction: column;
     }
 
-    .footer__inner > div {
-        width: 100%;
-        text-align: center;
+    .numbers .shadow::before {
+        min-height: 300px;
     }
 
-    .footer_rigth_column {
+    .features__inner {
+        flex-direction: column;
+        gap: 5vh;
+    }
+
+    .features_content {
+        max-width: 85%;
         margin-left: 0;
-        margin: 0 auto 50px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .logo {
+        background-image: url(../svg/Logo-cropped.svg);
+        width: 35px;
+        margin: 0;
     }
 
-    .footer_rigth_column h5 {
-        text-align: center;
+    .menu {
+        margin-top: 16px;
     }
 
-    .footer_left p  {
-       max-width: unset;
+    .menu button {
+        padding: 1em 2em;
+    }
+    
+    .inner__hero {
+        margin: 8vh 0 3vh;
+    }
+
+    .numbers .shadow::before {
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    :root {
+        font-size: 14px;
+    }
+
+    .numbers_card {
+        justify-content: start;
+        padding-left: 18vw;
+    }
+
+    .features__inner {
+        padding: 3vh 0 6vh;
+    }
+
+    .plan__inner {
+        padding: 6vh 0 10vh;
+    }
+
+    .network__inner .map {
+        margin: 5vh auto 8nh;
+    }
+
+    .plan_stack {
+        grid-template-columns: 1fr;
+    }
+
+    .customer_card {
+        min-width: unset;
+        width: 90vw;    
+    }
+
+    .customer_slider {
+        justify-content: center;
+    }
+
+    .divider {
+        width: 100%;
+        height: 2px;
+    }
+
+    .footer .shadow::before {
+        height: 100%;
+        top: 16px;
     }
 }
 
