qr code project

--- a/LaslesVPN/css/LaslesVPN.css
+++ b/LaslesVPN/css/LaslesVPN.css
@@ -764,7 +764,7 @@ img{
 
     .shifted {
         transform: translateX(-100%);
-        opacity: 0
+        opacity: 0;
     }
 
     .customer_card {
