qr code. added landmarks

--- a/qr-code-component-main/css/style.css
+++ b/qr-code-component-main/css/style.css
@@ -96,4 +96,9 @@ p {
 .attribution {
     position: absolute;
     bottom: 32px;
+    font-size: 11px; text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%); 
 }
