--- a/sunnyside-agency-landing-page-main/css/style.css
+++ b/sunnyside-agency-landing-page-main/css/style.css
@@ -57,6 +57,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 body {
     font-family: 'Barlow', sans-serif;
+    background-color: #FFFBF8;
 }
 
 img {
